# dnsblk

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  deny.txt  dnsblk.service
dnsblk/: Cargo.toml
dnsblk-ebpf/: Cargo.toml
dnsblk-ebpf/src/: lib.rs
dnsblk/src/: lib.rs  main.rs
ebpf/: Cargo.toml
ebpf/src/: lib.rs
src/: lib.rs  main.rs
