[package]
name = "dnsblk-ebpf"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
network-types = "0.0.6"

[profile.release]
opt-level = "s"
lto = true
debug = false
panic = "abort"
codegen-units = 1

[profile.dev]
panic = "abort"
